--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,8 @@ kotlinx-coroutines = "1.9.0"
 androidx-activity-compose = "1.9.2"
 voyager = "1.0.0"
 koin = "3.5.6"
+material-kolor = "2.0.0"
+stately = "2.0.5"
 
 [libraries]
 kotlin-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
@@ -19,6 +21,8 @@ navigator-screen-model = { module = "cafe.adriel.voyager:voyager-screenmodel", v
 navigator-transitions = { module = "cafe.adriel.voyager:voyager-transitions", version.ref = "voyager" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 navigator-koin = { module = "cafe.adriel.voyager:voyager-koin", version.ref = "voyager" }
+materialKolor = { module = "com.materialkolor:material-kolor", version.ref = "material-kolor" }
+stately-common = { module = "co.touchlab:stately-common", version.ref = "stately" }
 
 
 [plugins]
@@ -27,3 +31,4 @@ android-library = { id = "com.android.library", version.ref = "agp" }
 jetbrains-compose = { id = "org.jetbrains.compose", version.ref = "compose-plugin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
